--- a/web/appraisal/templates/appraisal/realestate_appraisal.html
+++ b/web/appraisal/templates/appraisal/realestate_appraisal.html
@@ -89,7 +89,7 @@
           </li>
           <li class="nav-item">
             <a class="{{request.GET.tab|tab_nav_class:"value"}}" id="value-tab" data-toggle="tab" href="#value" role="tab" aria-controls="value" aria-selected="{{request.GET.tab|tab_nav_aria_selected:"value"}}">
-              Valorización
+              Valoración
             </a>
           </li>
           <li class="nav-item">
