--- a/web/appraisal/static/appraisal/css/app.css
+++ b/web/appraisal/static/appraisal/css/app.css
@@ -1,16 +1,7 @@
-.error {
-  font-size: 0.8em;
-  color: #dc3545;
+#table_constructions {
+	font-size: 0.85em;
 }
 
-input.error
-{
-    border: 1px solid #dc3545 !important; 
-}
-
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-    /* display: none; <- Crashes Chrome on hover */
-    -webkit-appearance: none;
-    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+.td-center {
+	text-align: center;
 }
