--- a/web/main/templates/main/header.html
+++ b/web/main/templates/main/header.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
   {% if user.is_authenticated %}
-  <a class="navbar-brand" href="/main/">Tasador</a>
+  <a class="navbar-brand" href="/main/">TASADOR</a>
   {% else %}
-  <a class="navbar-brand" href="/">Tasador</a>
+  <a class="navbar-brand" href="/">TASADOR</a>
   {% endif %}
   
   {% if user.is_authenticated %}
@@ -17,7 +17,7 @@
       </li>
       {% if perms.appraisal.add_appraisal %}
       <li class="nav-item">
-        <a class="nav-link" href="/create/">Crear tasación</a>
+        <a class="nav-link" href="/create/">Ingresar tasación</a>
       </li>
       {% endif %}
     </ul>
